# genetic_regression

./: .gitignore  Cargo.toml  README.md
src/: gene.rs  individual.rs  lib.rs
