[package]
name = "genetic_regression"
version = "0.5.0"
edition = "2024"
description = "Nonlinear regresson by genetic algorithm"
license = "MIT"
repository = "https://github.com/lamrongol/genetic_regression"


[dependencies]
smartcore = "0.4.9"
strum = "0.28.0"
strum_macros = "0.28.0"
csv = "1.4.0"
rayon = "1.11.0"
rand = "0.10.0"
ndarray = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
